@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-31T02:05:46Z",
-  "count" : 7,
-  "count_minmax" : [ 5, 7 ],
-  "count_decinc" : [ -0, +7 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-11-13T08:23:25Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 7 ],
+  "count_decinc" : [ -5, +7 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
