@@ -1,11 +1,11 @@
 {
-  "count": 24,
+  "count": 23,
   "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-10-30T00:00:00Z",
-      "count": 7,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-10-31T00:00:00Z",
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-11-11T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-13T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
