@@ -1,3 +1,11 @@
+2022-11-13T08:23:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3454477479 # 1024
+* notice: last 14d: unq all: 6 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 696 2592 / 705 2616
+* notice: next accum: outdated-unq outdated-all / unq all: 696 2592 / 705 2615
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -1 -5 / +1 +4 -0 -0 / 1 4
+* notice: removed / changed dates: [] / [2022-10-30 2022-11-13]
+
 2022-11-13T01:43:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3453369470 # 1023
 * notice: last 14d: unq all: 6 24
